# jvs1

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
jeeves_dap_docs_v1_1_1/: 00_PROJECT_OVERVIEW.md  01_PRODUCT_DESCRIPTION.md  02_TECHNICAL_SPECIFICATION.md  03_ARCHITECTURE_PLAN.md  04_DEVELOPER_HANDOFF.md  05_IMPLEMENTATION_ROADMAP.md  06_CHANGELOG_v1_1_1.md  07_PATCH_SUMMARY_v1_1_1.md
scripts/: check.sh
src/jeeves_dap/: __init__.py  api.py
src/jeeves_dap/domain/: __init__.py  agent_program.py  models.py  validation.py
src/jeeves_dap/repositories/: __init__.py  agent_program_repository.py  deferred_message_repository.py  episode_repository.py  pending_understanding_repository.py  rule_candidate_repository.py  unknown_utterance_repository.py  user_message_repository.py
src/jeeves_dap/services/: __init__.py  agent_program_service.py  classification.py  deterministic_preprocessor.py  model_routing.py  orchestrator.py  pending_switch_service.py  repo_review_runtime.py  rule_engine.py  task_runtime_stub.py  verifier_stub.py
tests/: test_pr1_data_foundation.py  test_pr2_preprocessor_and_classifier.py  test_pr3_validation_and_unknowns.py  test_pr4_program_service.py  test_pr5_rule_engine_and_runtime.py  test_pr6_pending_switch_service.py  test_pr7_orchestrator.py  test_pr8_api.py
