[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jeeves-dap"
version = "0.1.0"
description = "Jeeves DAP MVP data foundation and contracts."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn>=0.27,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
